--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 beautifulsoup4==4.9.3
-bs4==0.0.1
+bs4~=4.9.3
 distlib==0.3.1
 Django==3.0.6
 django-cors-headers==3.3.0
@@ -9,8 +9,8 @@ Flask==2.0.0
 joblib==1.0.1
 neo4j==4.2.1
 neotime==1.7.4
-networkx==2.5
-pandas==1.2.3
+networkx~=2.5.1
+pandas~=1.0.3
 pathlib==1.0.1
 pipenv==2020.11.15
 py2neo==2021.1.1
@@ -19,3 +19,10 @@ selenium==3.141.0
 simplejson==3.17.2
 tqdm==4.59.0
 
+
+numpy~=1.18.1
+scikit-learn~=0.22.1
+nltk~=3.4.5
+twisted~=21.2.0
+python-dateutil~=2.8.1
+matplotlib~=3.1.3
